# deep_inference

./: CMakeLists.txt  Makefile  README.md  ReadMe.txt
examples/deep_inference/: AI_Report_progress_2019_Eng.pptx  check_error.hpp  layer_builder.cpp  layer_builder.hpp  main.cpp  unit_test.hpp  utils.hpp
include/: check_error.hpp  layer_builder.hpp  liteopConvert.hpp  logkit.hpp  unit_test.hpp  utils.hpp  utils_help.hpp
include/flatbuffers/: flatbuffers.h  stl_emulation.h
include/oneapi/: dnnl.h  dnnl.hpp  dnnl_config.h  dnnl_debug.h  dnnl_version.h
include/opencv2/: opencv_modules.hpp
lib/: libdnnl.so.2  libopencv_highgui.so.3.4.3
lib/cmake/dnnl/: dnnl-targets-release.cmake  dnnl-targets.cmake
lib/cmake/mkldnn/: mkldnn-targets-release.cmake  mkldnn-targets.cmake
source/: Optflite.cpp  layer_builder.cpp  liteopConvert.cpp  main.cpp  unit_test.cpp  utils.cpp
tests/benchdnn/inputs/prelu/: test_prelu_all
